implement initial server setup with routes and controllers for credential issuance

--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "ssi-oid4vci-backend",
+  "version": "0.1.0",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "node src/index.js"
+  },
+  
 	"dependencies": {
+		"dotenv": "^17.2.3",
 		"express": "^5.2.1"
 	}
 }
