--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "node src/index.js"
   },
-  
-	"dependencies": {
-		"dotenv": "^17.2.3",
-		"express": "^5.2.1"
-	}
+  "dependencies": {
+    "@veramo/core": "~4.2.0",
+    "@veramo/credential-w3c": "~4.2.0",
+    "@veramo/key-manager": "~4.2.0",
+    "@veramo/kms-local": "~4.2.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
+  }
 }
