--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "dependencies": {
     "@veramo/core": "~4.2.0",
     "@veramo/credential-w3c": "~4.2.0",
+    "@veramo/data-store": "~4.2.0",
+    "@veramo/did-manager": "~4.2.0",
+    "@veramo/did-provider-key": "~4.2.0",
+    "@veramo/did-resolver": "~4.2.0",
     "@veramo/key-manager": "~4.2.0",
     "@veramo/kms-local": "~4.2.0",
+    "did-resolver": "^4.1.0",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "sqlite3": "^5.1.7"
   }
 }
