--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "node src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@veramo/core": "~4.2.0",
@@ -15,9 +16,16 @@
     "@veramo/did-resolver": "~4.2.0",
     "@veramo/key-manager": "~4.2.0",
     "@veramo/kms-local": "~4.2.0",
+    "cors": "^2.8.5",
     "did-resolver": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jose": "^6.1.3",
+    "mongoose": "^9.0.2",
+    "nanoid": "^5.1.6",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
